<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/imcbackground"
        android:layout_width="447dp"
        android:layout_height="100dp"
        android:layout_marginBottom="48dp"
        android:background="#00BCD4"
        android:textAlignment="textStart"
        android:textColor="#F3EFEF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lblPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imcTitulo"
        android:layout_width="277dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:background="#00BCD4"
        android:text="@string/imcTitulo"
        android:textAlignment="textStart"
        android:textColor="#F3EFEF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lblPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/imcSubTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:outlineAmbientShadowColor="#FBFBFB"
        android:text="@string/imcSubTitulo"
        android:textColor="#FAF7F7"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imcTitulo" />

    <TextView
        android:id="@+id/lblPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="105dp"
        android:text="@string/lblPeso"
        app:layout_constraintEnd_toStartOf="@+id/lblAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imcbackground" />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="86dp"
        android:layout_height="40dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPeso" />

    <TextView
        android:id="@+id/lblKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblKg"
        app:layout_constraintStart_toEndOf="@+id/editTextPeso"
        app:layout_constraintTop_toTopOf="@+id/editTextPeso" />

    <TextView
        android:id="@+id/lblAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="48dp"
        android:text="@string/lblAltura"
        app:layout_constraintStart_toEndOf="@+id/lblPeso"
        app:layout_constraintTop_toBottomOf="@+id/imcbackground" />

    <EditText
        android:id="@+id/editTextAltura"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/lblKg"
        app:layout_constraintTop_toBottomOf="@+id/lblAltura" />

    <TextView
        android:id="@+id/lblCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="21dp"
        android:text="@string/lblCm"
        app:layout_constraintStart_toEndOf="@+id/editTextAltura"
        app:layout_constraintTop_toTopOf="@+id/editTextAltura" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="181dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lblButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblKg" />

    <TextView
        android:id="@+id/editTextIMC"
        android:layout_width="312dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/lblResultado"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

    <TextView
        android:id="@+id/textViewGrauObesidade"
        android:layout_width="259dp"
        android:layout_height="171dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/lblGrau"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIMC"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>